--- a/part0/04.md
+++ b/part0/04.md
@@ -1,4 +1,4 @@
-
+```mermaid
 
 
     browser->>server: GET https://studies.cs.helsinki.fi/exampleapp/notes
@@ -24,3 +24,4 @@
     deactivate server
 
     Note right of browser: The browser executes the callback function that renders the notes
+```
